Resolved Jira & ADO alignment issue in crate bug screen.

--- a/app/src/globalComponents/AvoMultiselect.scss
+++ b/app/src/globalComponents/AvoMultiselect.scss
@@ -4,7 +4,7 @@
     }
     .p-multiselect {
         width: 100%;
-        margin-top: 0.3rem;
+        // margin-top: 0.3rem;
     }
     .validation_container {
         height: 1rem;
